Add QR code image to index.html

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     <h3>Établissez le contact</h3>
                     <p>Ces archives sont fragiles, mais le dialogue est la clé de leur préservation. N'hésitez pas à me contacter.</p>
                     <div class="qr-code-container">
-                        <img src="placeholder_qr.png" alt="QR Code pour plus d'informations" class="qr-code">
+                        <img src="tr-ee-9nVcwM-qrcode-white.png" alt="QR Code pour plus d'informations" class="qr-code">
                         <p class="qr-caption">Scannez pour des informations supplémentaires</p>
                     </div>
                     <div class="social-links">
