Test modification and push to ensure Git detects changes

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
             <div class="contact-content">
                 <div class="contact-info">
                     <h3>Établissez le contact</h3>
-                    <p>Ces archives sont fragiles, mais le dialogue est la clé de leur préservation. N'hésitez pas à me contacter.</p>
+                    <p>Les archives ont tendances à être fragiles, mais le dialogue est la clé de leur préservation. N'hésitez pas à me contacter.</p>
+                    <!-- Modification test pour Git -->
                     <div class="qr-code-container">
                         <img src="tr-ee-9nVcwM/tr-ee-9nVcwM-qrcode-white.png" alt="QR Code pour plus d'informations" class="qr-code">
                         <p class="qr-caption">Scannez pour des informations supplémentaires</p>
