Ajout de texte 'Malheureusement, la piste audio a disparu. Plutôt ironique. Donc nous avons des questions mais pas de réponses audios.' dans projet1.html.

--- a/projet1.html
+++ b/projet1.html
@@ -32,7 +32,8 @@
                 <h2>Birthday Cake</h2>
                 <img src="cheese.png" alt="Birthday Cake" class="project-detail-image">
                 <p>Ceci est la page détaillée du Projet 1, nommé Birthday Cake. Ce court-métrage explore le futur, et à présent le passé d'un homme, offrant une réflexion sur sa propre personne en tant que souvenir.</p>
-                <p>Court-métrage réalisé durant mon année de terminale, sous le thème de la "Disparition".</p>
+                <p>Court-métrage réalisé durant mon année de terminale, sous le thème de la "Disparition". Malheureusement, la piste audio à disparue. Plutôt ironique.
+                    Donc nous avons des questions mais pas de réponses audios.</p>
                 
                 <div class="project-video-container">
                     <iframe class="project-video"
