Ajout du système de particules artistiques avec couleurs bleues/violettes et interactions

--- a/index.html
+++ b/index.html
@@ -207,5 +207,8 @@
             });
         });
     </script>
+    
+    <!-- Script des particules -->
+    <script src="particles.js"></script>
 </body>
 </html> 
