Ajout de texte dans la page index.html

--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
         </section>
 
         <section id="galerie" class="gallery-section">
-            <h2>Galerie Récupérée</h2>
+            <h2>Galerie, portfolio sur papier</h2>
+            <p class="description">
+                Voici quelques croquis que j'ai réalisés sur papier durant ma dernière année de lycée.
+            </p>
             <div class="gallery-grid">
                 <div class="gallery-item">
                     <a href="storyboard_001.jpg" data-fancybox="storyboards" data-caption="Storyboard #001 - Première séquence">
